Created encryptor app

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,3 +20,4 @@ add_subdirectory(submodules)
 add_subdirectory(twitcurl)
 add_subdirectory(qt-aes)
 add_subdirectory(haven-twitter)
+add_subdirectory(encryptor)
